syntax = "proto3";

option go_package = "genproto/catalog_service";

package catalogservice;


service CategoryService {
    rpc Create(CreateCategory) returns (GetCategory) {}
    rpc GetByID(CategoryPrimaryKey) returns (GetCategory) {}
    rpc GetList(GetListCategoryRequest) returns (GetListCategoryResponse) {}
    rpc Update(UpdateCategory) returns (GetCategory) {}
    rpc Delete(CategoryPrimaryKey) returns (CategoryPrimaryKey) {}
}

message Empty {}

message CategoryPrimaryKey {
    string id = 1;

}


message CreateCategory {
    string slug = 1; 
    string name_uz = 2;
    string name_ru = 3;
    string name_en = 4;
    bool active = 5;
    int32 order_no = 6;
    string parent_id = 7;
}

message GetCategory {
    string id = 1;
    string slug = 2;
    string name_uz = 3;
    string name_ru = 4;
    string name_en = 5;
    bool active = 6;
    int32 order_no = 7;
    string parent_id = 8;
    string created_at = 9;
    string updated_at = 10;
    int64 deleted_at = 11;
}

message UpdateCategory {
    string id = 1;
    string slug = 2;
    string name_uz = 3;
    string name_ru = 4;
    string name_en = 5;
    bool active = 6;
    int32 order_no = 7;
    string parent_id = 8;
}

message GetListCategoryRequest {
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListCategoryResponse {
    int64 Count = 1;
    repeated GetCategory Categories = 2;
}
